src/objects/Resource_Week_Availability__c.object
<CustomObject>
    <fields>
        <fullName>Autorenewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Autorenewal</description>
        <label>Autorenewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Backend_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Backend_User__c</description>
        <label>Backend User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Resource_Week_Availability</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <description>Resource</description>
        <label>Resource</label>
        <referenceTo>Resource__c</referenceTo>
        <relationshipLabel>Resource Week Availability</relationshipLabel>
        <relationshipName>Resource_Group_Availability</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Schedule_Valid_From__c</fullName>
        <description>Schedule Valid From</description>
        <label>Schedule Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Schedule_Valid_till__c</fullName>
        <description>Schedule Valid till</description>
        <label>Schedule Valid till</label>
        <type>Date</type>
    </fields>
    <label>Resource Week Availability</label>
    <nameField>
        <displayFormat>RWA-{0000}</displayFormat>
        <label>Resource Week Availability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Resource Week Availability</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>